# TFM_Alonso_Marcos_Mu-oz

./: .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
docs/: README.md  custom_properties_openmetadata.md  dcat_mapping.md  diagramas_mermaid.md  guia_centralizada.md  ingesta_tecnica_postgres.md  openmetadata_k8s.md  planificacion_kanban.md  postgres_demo.md  tfm_ingestor.md
docs/anexos_instalacion/: A01_prerrequisitos.md  A02_despliegue_infra_desde_repo.md  A03_ingesta_tecnica_postgres.md  A04_custom_properties_tags_dry_run.md  README.md
k8s/: openmetadata-dependencies.values.yaml  openmetadata.values.yaml
scripts/infra/: bootstrap_governance.py  deploy_postgres_k8s.ps1  generate_om_jwt.py  helm.ps1  ingest_postgres.ps1  launch_infra.ps1  run_full_flow.ps1  status_infra.ps1
sql/: opendata_demo_init.sql
tfm_ingestor/: README.md  pyproject.toml
tfm_ingestor/config/: governance_defaults.yaml  mapping_rules.yaml
tfm_ingestor/src/tfm_ingestor/: __main__.py  config.py  main.py  mapping.py  om_api.py
tfm_ingestor/tests/: test_mapping.py  test_repo_hygiene.py  test_rules_config.py
